Change URL: teambition -> aliyun
Signed-off-by: Jiang Xin <zhiyou.jx@alibaba-inc.com>

--- a/en/index.html
+++ b/en/index.html
@@ -1311,7 +1311,7 @@
   <div class="lmr">
     <div class="home__landing">
       <div class="home__landing--img">
-        <img src="/images/git-repo-single.gif" alt="Site Landing Page image">
+        <img src="/images/git-pr-demo.gif" alt="Site Landing Page image">
       </div>
       <div class="home__landing--txt">
         
