--- a/zh_cn/index.html
+++ b/zh_cn/index.html
@@ -1311,7 +1311,7 @@
   <div class="lmr">
     <div class="home__landing">
       <div class="home__landing--img">
-        <img src="/images/git-repo-single.gif" alt="Site Landing Page image">
+        <img src="/images/git-pr-demo.gif" alt="Site Landing Page image">
       </div>
       <div class="home__landing--txt">
         
